User Stories #139990413,#139990941 and #139991469.  Also added CORS headers to webapi.js

--- a/public/form/resetpwd.html
+++ b/public/form/resetpwd.html
@@ -12,19 +12,19 @@
 
 <form class='uswds-form'>
   <div class="form-group">
-    <label for="email">New Password:</label>
+    <label for="pwd">New Password:</label>
     <input type="password" class="form-control" id="pwd">
   </div>
   <div class="form-group">
-    <label for="pwd">Confirm Password:</label>
+    <label for="pwd2">Confirm Password:</label>
     <input type="password" class="form-control" id="pwd2">
   </div>
 
-  <a href="form/resetpwd.html" class="btn btn-primary" rel="non-api">Reset Password</a>
+  <a href="form/resetpwd.html" class="btn btn-primary" >Reset Password</a>
 
 </form>
 <div class="top-space"></div>
 <ul class="form-catalog">
-    <li><a href="form/register.html" rel="non-api">Create Account</a></li>
-    <li><a href="form/signin.html" rel="non-api">Sign In</a></li>
+    <li><a href="form/register.html" >Create Account</a></li>
+    <li><a href="form/signin.html" >Sign In</a></li>
 </ul>
