--- a/public/form/signin.html
+++ b/public/form/signin.html
@@ -11,11 +11,11 @@
   <div class="checkbox">
     <label><input type="checkbox"> Remember me</label>
   </div>
-  <a href="form/userprofile.html" class="btn btn-primary" rel="non-api">Sign In User</a>
-  <a href="form/admin.html" class="btn btn-primary" rel="non-api">Sign In Admin</a>
+  <a href="form/userprofile.html"  class="btn btn-primary" >Sign In User</a>
+  <a href="form/admin.html" class="btn btn-primary" >Sign In Admin</a>
 </form>
 <div class="top-space"></div>
 <ul class="form-catalog">
-  <li><a href="form/register.html" rel="non-api">Create Account</a></li>
-  <li><a href="form/resetpwd.html" rel="non-api">Reset Password</a></li>
+  <li><a href="form/register.html" >Create Account</a></li>
+  <li><a href="form/resetpwd.html" >Reset Password</a></li>
 </ul>
