--- a/public/form/register.html
+++ b/public/form/register.html
@@ -21,12 +21,12 @@
     <input type="password" class="form-control" id="pwd">
   </div>
 <div class="form-group">
-    <label for="pwd">Confirm Password:</label>
+    <label for="pwd2">Confirm Password:</label>
     <input type="password" class="form-control" id="pwd2">
   </div>
-  <a href="form/register.html" class="btn btn-primary" rel="non-api">Create Account</a>
+  <a href="form/register.html" class="btn btn-primary">Create Account</a>
 </form>
 <div class="top-space"></div>
 <ul class="form-catalog">
-  <li><a href="form/signin.html" rel="non-api">Sign In</a></li>
+  <li><a href="form/signin.html">Sign In</a></li>
 </ul>
