--- a/public/form/welcome.html
+++ b/public/form/welcome.html
@@ -5,8 +5,7 @@
     text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 </p>
 <br/>
-<ul class="catalog">
-    <li><a href="form/register.html" rel="non-api">Create Account</a></li>
-    <li><a href="form/signin.html" rel="non-api">Sign In</a></li>
-
+<ul class="form-catalog">
+    <li><a href="form/register.html">Create Account</a></li>
+    <li><a href="form/signin.html" >Sign In</a></li>
 </ul>
