--- a/public/form/admin.html
+++ b/public/form/admin.html
@@ -1,1 +1,6 @@
 <h5 class="cat">Administrator</h5>
+
+<div class="top-space"></div>
+<ul class="form-catalog">
+    <li><a href="form/welcome.html">Logout</a></li>
+</ul>
