Added Admin Functionality; User Story #139991469

--- a/public/form/register.html
+++ b/public/form/register.html
@@ -24,7 +24,7 @@
     <label for="pwd2">Confirm Password:</label>
     <input type="password" class="form-control" id="pwd2">
   </div>
-  <a href="form/register.html" class="btn btn-primary">Create Account</a>
+  <a href="form/register.html" class="btn btn-primary outscope">Create Account</a>
 </form>
 <div class="top-space"></div>
 <ul class="form-catalog">
