--- a/public/form/resetpwd.html
+++ b/public/form/resetpwd.html
@@ -20,7 +20,7 @@
     <input type="password" class="form-control" id="pwd2">
   </div>
 
-  <a href="form/resetpwd.html" class="btn btn-primary" >Reset Password</a>
+  <a href="form/resetpwd.html" class="btn btn-primary outscope" >Reset Password</a>
 
 </form>
 <div class="top-space"></div>
