--- a/public/form/signin.html
+++ b/public/form/signin.html
@@ -11,8 +11,8 @@
   <div class="checkbox">
     <label><input type="checkbox"> Remember me</label>
   </div>
-  <a href="form/userprofile.html"  class="btn btn-primary" >Sign In User</a>
-  <a href="form/admin.html" class="btn btn-primary" >Sign In Admin</a>
+  <a href="form/userprofile.html"  class="btn btn-primary">Sign In as User</a>
+  <a href="form/admin/admin.html" class="btn btn-primary" >Sign In as Admin</a>
 </form>
 <div class="top-space"></div>
 <ul class="form-catalog">
