--- a/public/form/welcome.html
+++ b/public/form/welcome.html
@@ -12,3 +12,15 @@
     <!--<li><a href="form/register.html">Create Account</a></li>-->
     <li><a href="form/signin.html" >Sign In</a></li>
 </ul>
+
+<script>
+$(function(){
+
+//Initialize/Clear Map
+arcgis.removeFeatureLayer();
+
+//Mimics Admin Logoff
+app.isAdmin = false;
+
+});
+</script>
