More admin functionality

--- a/public/form/admin/admin.html
+++ b/public/form/admin/admin.html
@@ -15,19 +15,23 @@
                 <td>2/13/2017</td>
                 <td>Oroville Evacuation</td>
                 <td>Emergency</td>
-                <th><a href="#" rel="-121.4855237,39.5387752" title="Oroville Evacuation" class="analytics view">View</a></th>
+                <td><a href="#" rel="-121.4855237,39.5387752" title="Oroville Evacuation" class="analytics view">View</a></td>
             </tr>
             <tr>
                 <td>2/17/2017</td>
                 <td>Hwy 50 Mud slide</td>
                 <td>Non Emergency</td>
-                <th><a href="#" rel="-120.2968596,38.7746298" title="Hwy 50 Mud slide" class="analytics view">View</a></th>
+                <td><a href="#" rel="-120.2968596,38.7746298" title="Hwy 50 Mud slide" class="analytics view">View</a></td>
             </tr>
             <tr>
                 <td>2/21/2017</td>
                 <td>Manteca Levee</td>
                 <td>Emergency</td>
-                <th><a href="#" title="Manteca Levee" rel="-121.1979953,37.7290953" class="analytics view">View</a></th>
+                <td><a href="#" title="Manteca Levee" rel="-121.1979953,37.7290953" class="analytics view">View</a></td>
+            </tr>
+            <tr>
+                
+                <td colspan=4 ><a href='#' id="lnkClearMap" class="pull-right">Clear Map</a></td>
             </tr>
         </tbody>
     </table>
@@ -50,8 +54,6 @@
             arcgis.showAnalyticalPopup($(this));
         });
 
-        //Clean Up Form
-        arcgis.clearMapGraphics();
 
     });
 
