Changed api URL

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
     <script>
         $(function () {
 
-            //arcgis.initializeMap();
+            arcgis.initializeMap();
             app.loadForm('form/welcome.html');
             app.bindMenu();
             app.bindCatalog();
