--- a/public/form/admin/admin-create-alert.html
+++ b/public/form/admin/admin-create-alert.html
@@ -1,10 +1,24 @@
-<h5 class="cat">Admin Create Alert</h5>
-<div class="form-group">
+<h5 class="cat">Generate Alert</h5>
+<div class="form-group" style="display:none">
     <label for="title">Alert Radius:</label>
     <a href='#' id="lnkRadius">Select Radius</a>&nbsp;|&nbsp;<a href='#' id="lnkClearRadius">Clear Radius</a>
 </div>
-<form class='uswds-form' method="post" id="frmAlert">
 
+<form class='uswds-form' method="post" id="frmAlert">
+    <div class="form-group">
+        <label for="title">Alert Center Zip Code:</label>
+        <input type="text" class="form-control" id="zipcode" name="zipcode" required>
+    </div>
+    <div class="form-group">
+        <label for="title">Alert Radius (miles):</label>
+        <select class="form-control" id="radius" name="radius" required>
+         <option value="10">10</option>
+         <option value="25">25</option>
+         <option value="50">50</option>
+         <option value="75">75</option>
+         <option value="100">100</option>
+    </select>
+    </div>
     <div class="form-group">
         <label for="title">Alert Title:</label>
         <input type="text" class="form-control" id="title" name="title" required>
@@ -22,7 +36,7 @@
         </div>
     </div>
     <div id="results"></div>
-    <button type="submit" class="btn btn-danger">Send alert</button>
+    <button type="submit" class="btn btn-danger" id="btnSendAlert">Send alert</button>
 </form>
 <!--<button id="btnAlert" class="btn btn-danger">Create alert and send</button>-->
 
@@ -35,16 +49,46 @@
 <script>
     $(function () {
 
-        $("#frmAlert *").prop("disabled", true);
+        //$("#frmAlert *").prop("disabled", true);
 
-        $("form").validate();
+        $('#zipcode').focus();
+
+        $("#zipcode").on("blur", function () {
+
+            drawRadius($(this).val(), $('#radius').val())
+
+        });
+        $('#radius').on('change', function () {
+            drawRadius($('#zipcode').val(), $(this).val())
+        })
+
+
+        function drawRadius(zip, miles) {
+
+            if (!isNaN(zip) && zip.length == 5)
+                arcgis.drawRadius(zip, miles);
+
+        }
+
+
+        $("form").validate({
+            rules: {
+                zipcode: {
+                    required: true,
+                    minlength: 5,
+                    maxlength: 5,
+                    digits: true
+                }
+            }
+        });
 
         $("form").submit(function (e) {
 
             e.preventDefault();
 
             if (!$("form").valid()) return;
-            
+
+
             var submitdata = { title: null, message: null, type: null, lat: null, long: null, sendSMS: null, sendEmail: null };
 
             submitdata.title = $('#title').val();
@@ -52,38 +96,44 @@
             submitdata.type = $("input[name='optradio']:checked").val();
             submitdata.lat = arcgis.alertRadiusData.centerLatitude;
             submitdata.long = arcgis.alertRadiusData.centerLongitude;
-            submitdata.sendSMS = $("input[name='optradio']:checked").val() == 'Emergency' ? 1 : 0;
-            submitdata.sendEmail = 1;
+            submitdata.sendSMS = 0;
+            submitdata.sendEmail = 0;
 
-            if (!arcgis.alertRadiusData.isPointInRadius)
-                $('#results')
-                    .show()
-                    .html('<div class="alert alert-danger"><strong>Alert</strong> wasn\'t sent due to point being outside search radius!</div>')
-                    .fadeOut(8000);
-            else {
-                $.ajax({
-                    url: app.sendalertApi,
-                    type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify(submitdata),
-                    // xhrFields: {
-                    //     withCredentials: true
-                    // },
-                    success: function (data) {
-                        $('#results')
-                            .show()
-                            .html('<div class="alert alert-success"><strong>Success!</strong>  Alert was successfully sent!</div>')
-                            .fadeOut(8000);
-                    },
-                    error: function (error) {
-                        $('#results')
-                            .show()
-                            .html('<div class="alert alert-danger"><strong>Ooops!</strong> Error sending alert!</div>')
-                            .fadeOut(8000);
-                    }
-                });
-
+            if(arcgis.alertRadiusData.isPointInRadius){
+                submitdata.sendSMS = $("input[name='optradio']:checked").val() == 'Emergency' ? 1 : 0;
+                submitdata.sendEmail = 1;
             }
+
+            $.ajax({
+                url: app.sendalertApi,
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify(submitdata),
+                // xhrFields: {
+                //     withCredentials: true
+                // },
+                success: function (data) {
+                    $('#results')
+                        .show()
+                        .html('<div class="alert alert-success"><strong>Success!</strong>  Alert was successfully sent!</div>')
+                        .fadeOut(5000);
+
+                        $('#title').val('');
+                        $('#message').val('');
+                        $('#zipcode').val('').focus();
+                        $('#radius').val('10')
+                        $("input[name='optradio']:checked").val('Non-Emergency');
+
+                },
+                error: function (error) {
+                    $('#results')
+                        .show()
+                        .html('<div class="alert alert-danger"><strong>Ooops!</strong> Error sending alert!</div>')
+                        .fadeOut(8000);
+                }
+            });
+
+
 
         });
 
