--- a/public/form/userprofile.html
+++ b/public/form/userprofile.html
@@ -18,6 +18,10 @@
         <label for="phonenumber">Phone number:</label>
         <input type="tel" class="form-control" id="phonenumber" name="phonenumber" required>
     </div>
+    <div class="form-group">
+        <label for="zipcode">Zipcode:</label>
+        <input type="text" class="form-control" id="zipcode" name="zipcode" required>
+    </div>
     <div class="checkbox">
         <label><input type="checkbox" id="receivetext" name="receivetext">Receive text</label>
     </div>
@@ -46,6 +50,7 @@
                 $('#lastname').val(data.LastName);
                 $('#email').val(data.Email);
                 $('#phonenumber').val(data.Phone);
+                $('#zipcode').val(data.ZipCode);
                 $('#receivetext').attr('checked', data.ReceiveText);
                 $('#receiveemail').attr('checked', data.ReceiveEmail);
             }).fail(function (d) {
@@ -57,6 +62,12 @@
                 phonenumber: {
                     required: true,
                     phoneUS: true
+                },
+                zipcode: {
+                    required: true,
+                    minlength: 5,
+                    maxlength: 5,
+                    digits: true
                 }
             }
         });
@@ -67,11 +78,12 @@
 
             if (!$("form").valid()) return;
 
-            var submitdata = {FirstName: null, LastName: null, Email: null, Phone: null, ReceiveText: null, ReceiveEmail: null };
+            var submitdata = {FirstName: null, LastName: null, Email: null, Phone: null,ZipCode:null, ReceiveText: null, ReceiveEmail: null };
 
             submitdata.FirstName = $('#firstname').val();
             submitdata.LastName = $('#lastname').val();
             submitdata.Phone = $('#phonenumber').val();
+            submitdata.ZipCode = $('#zipcode').val();
             submitdata.Email = $('#email').val();
             submitdata.ReceiveText = $('#receivetext').prop('checked');
             submitdata.ReceiveEmail = $('#receiveemail').prop('checked');
