--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>ADPQ Prototype - The iFish Group</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-        <link rel="stylesheet" href="css/arcgis3.19/claro.css">
-        <link rel="stylesheet" href="css/arcgis3.19/esri.css" />
+        <link rel="stylesheet" href="https://js.arcgis.com/3.19/dijit/themes/claro/claro.css">
+        <link rel="stylesheet" href="https://js.arcgis.com/3.19/esri/css/esri.css" />
         <link rel="stylesheet" href="css/whhg.css">
         <link rel="stylesheet" href="css/uswds.css">
         <link href="css/app.css" rel="stylesheet" media="screen">
@@ -138,7 +138,7 @@
     <script src="js/jquery/jquery.validate/jquery.validate.min.js"></script>
     <script src="js/jquery/jquery.validate/additional-methods.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
-    <script defer src="js/arcgis3.19/init.js"></script>
+    <script defer src="https://js.arcgis.com/3.19/"></script>
     <script src="js/alasql/alasql.min.js"></script>
     <script src="js/arcgis.js"></script>
     <script src="js/app.js"></script>
