--- a/public/form/welcome.html
+++ b/public/form/welcome.html
@@ -11,6 +11,7 @@
     
     <!--<li><a href="form/register.html">Create Account</a></li>-->
     <li><a href="form/signin.html" >Sign In</a></li>
+    <li>Prototype Version: 0.0.1</li>
 </ul>
 <br>
 <p>version 2</p>
