--- a/public/form/admin/admin.html
+++ b/public/form/admin/admin.html
@@ -1,5 +1,5 @@
-<h5 class="cat">Admin Control Panel</h5>
-<h4>Analyze and Visualize</h4>
+<h5 class="cat">Administrator Control Panel</h5>
+<p><b>Analyze and Visualize Alerts</b></p>
 <div class="table-responsive">
     <table class="table table-bordered table-striped table-hover " id='tbl-alerts'>
         <thead>
