--- a/public/form/register.html
+++ b/public/form/register.html
@@ -1,7 +1,7 @@
 <h5 class="cat">Create Account</h5>
 <div class="alert alert-info">
            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-           <strong>All fields are required.</strong>
+           <strong>This form is for design purposes only.  Form is not intended to be used.</strong>
       </div>
 <form class='uswds-form'>
     <div class="form-group">
@@ -24,7 +24,7 @@
     <label for="pwd2">Confirm Password:</label>
     <input type="password" class="form-control" id="pwd2">
   </div>
-  <a href="form/register.html" class="btn btn-primary outscope">Create Account</a>
+  <a href="form/register.html" class="btn btn-primary outscope" disabled>Create Account</a>
 </form>
 <div class="top-space"></div>
 <ul class="form-catalog">
