--- a/public/form/resetpwd.html
+++ b/public/form/resetpwd.html
@@ -2,12 +2,7 @@
 
        <div class="alert alert-info">
            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-           <strong>Passwords must:</strong>
-        <ul >
-          <li data-validator="length">Be at least 8 characters</li>
-          <li data-validator="uppercase">Have at least 1 uppercase character</li>
-          <li data-validator="numerical">Have at least 1 numerical character</li>
-        </ul>
+           <strong>This form is for design purposes only.  Form is not intended to be used.</strong>
       </div>
 
 <form class='uswds-form'>
@@ -20,7 +15,7 @@
     <input type="password" class="form-control" id="pwd2">
   </div>
 
-  <a href="form/resetpwd.html" class="btn btn-primary outscope" >Reset Password</a>
+  <a href="form/resetpwd.html" class="btn btn-primary outscope" disabled>Reset Password</a>
 
 </form>
 <div class="top-space"></div>
