--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ADPQ Prototype 0.0.2 - The iFish Group</title>
+    <title>ADPQ Prototype 0.0.3 - The iFish Group</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
         <link rel="stylesheet" href="https://js.arcgis.com/3.19/dijit/themes/claro/claro.css">
@@ -75,6 +75,7 @@
                         </div>
                         <div id="tabActiveFire" class="tab">
                             <h5 class="cat">Active Fire Boundaries</h5>
+                            <p><b>Data Souce: United States Geological Service (USGS)</b></p>
                             <p>This service allows users in remote locations to manipulate map information displays, zoom in
                                 and out to display fire information at various scales and detail, and print hard copy maps
                                 for use in fire information and media briefings, dispatch offices and coordination centers.</p>
@@ -82,24 +83,26 @@
                             </ul>
                         </div>
                         <div id="tabRiverGauge" class="tab">
-                            <h5 class="cat">River Gauge - Current and Forecast (NOAA)</h5>
-                            <p>Advanced Hydrologic Prediction Service (AHPS) River Gauge Current and Forecast Flood Stages.
-                                River Gauge current stages and forecasted river stages out to 336 hours</p>
+                            <h5 class="cat">River Gauge - Current and Forecast</h5>
+                            <p><b>Data Souce: National Oceanic and Atmospheric Administration (NOAA)</b></p>
+                            <p>Advanced Hydrologic Prediction Service (AHPS) River Gauge current and forecast flood stages. River Gauge current stages and forecasted river stages for the next 336 hours.</p>
                             <ul class="catalog">
 
                             </ul>
                         </div>
                         <div id="tabWeather" class="tab">
-                            <h5 class="cat">Weather Hazards (NOAA)</h5>
+                            <h5 class="cat">Weather Hazard</h5>
+                            <p><b>Data Souce: National Oceanic and Atmospheric Administration (NOAA)</b></p>
                             <p>Temperature, precipitation, flooding, high winds, high waves, and wildfire/drought hazards for
-                                the U.S. through 14 days.</p>
+                                the U.S. in the past 7 days.</p>
                             <ul class="catalog">
 
                             </ul>
                         </div>
                         <div id="tabEarthquakes" class="tab">
-                            <h5 class="cat">Earthquakes (USGS)</h5>
-                            <p>This service represents the latest earthquakes for the last seven days from the USGS. Data for
+                            <h5 class="cat">Earthquakes</h5>
+                             <p><b>Data Souce: United States Geological Service (USGS)</b></p>     
+                            <p>This service represents the latest earthquake information for the last seven days from the USGS. Data for
                                 this service is updated every 10 minutes from the USGS CSV repository.</p>
 
                             <ul class="catalog">
