--- a/public/form/signin.html
+++ b/public/form/signin.html
@@ -1,12 +1,12 @@
-<h5 class="cat">Sign in</h5>
+<h5 class="cat">Sign In</h5>
 <form class='uswds-form'>
   <div class="form-group">
     <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
+    <input type="email" class="form-control" id="email" value="jdoe@example.com">
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
+    <input type="password" class="form-control" id="pwd" value="12345678">
   </div>
   <div class="checkbox">
     <label><input type="checkbox"> Remember me</label>
