--- a/public/form/welcome.html
+++ b/public/form/welcome.html
@@ -1,5 +1,5 @@
 <h5 class="cat">Plan and Prepare California</h5>
-<h4>What will you do if a disaster strikes today? Will you be ready?</h4>
+<h4>What will you do if a disaster strikes today?  Do you have the information you need to be ready?</h4>
 
 <p>
     “Preparedness is everyone's job. Not just government agencies but all sectors of society -- service providers, businesses, civic and volunteer groups, industry associations and neighborhood associations, as well as every individual citizen -- should plan ahead for disaster. During the first few hours or days following a disaster, essential services may not be available. People must be ready to act on their own.” ​
